# Online-Mart-System

inventory_service/: Dockerfile.dev  pyproject.toml
inventory_service/inventory_service/: crud.py  db.py  main.py  models.py  schemas.py
inventory_service/inventory_service/kafka/: consumer.py  inventory_pb2.proto  inventory_pb2.py  producer.py
notification_service/: .env  Dockerfile.dev  pyproject.toml
notification_service/notification_service/: crud.py  db.py  main.py  models.py  notifications.py  schemas.py  settings.py
notification_service/notification_service/kafka/: consumer.py  notification_pb2.proto  notification_pb2.py  producer.py
order_service/: Dockerfile.dev  compose.yaml  pyproject.toml
order_service/order_service/: crud.py  db.py  main.py  models.py  schemas.py
order_service/order_service/kafka/: .proto  consumer.py  order_pb2.py  producer.py
payment_service/: .env  Dockerfile.dev  pyproject.toml
payment_service/payment_service/: crud.py  db.py  main.py  models.py  payment.html  schemas.py  settings.py
payment_service/payment_service/kafka/: .proto  consumer.py  payment_pb2.py  producer.py
product_service/: Dockerfile.dev  compose.yaml  pyproject.toml
product_service/product_service/: db.py  main.py
product_service/product_service/kafka/: .proto  _pb2.py  consumer.py  producer.py
user_service/: .env  Dockerfile.dev  pyproject.toml
user_service/user_service/: auth.py  crud.py  db.py  dp.py  main.py  models.py  schemas.py
user_service/user_service/kafka/: .proto  consumer.py  producer.py
